<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    app:contentPadding="5dp"
    app:cardElevation="2dp"

    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:id="@+id/tv_report"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/report"
            style="@style/bottomsheetitem"
            android:onClick="item_more_bottomsheet"/>

        <TextView
            android:id="@+id/tv_notifpost"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/turn_on_post_notifications"
            style="@style/bottomsheetitem"/>
        <TextView
            android:id="@+id/tv_copylink"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/copy_link"
            style="@style/bottomsheetitem"/>
        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/share_to"
            style="@style/bottomsheetitem"/>
        <TextView
            android:id="@+id/tv_unfollow"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/unfollow"
            style="@style/bottomsheetitem"/>
        <TextView
            android:id="@+id/tv_mute"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:text="@string/mute"
            style="@style/bottomsheetitem"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>