<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_margin="5dp"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/img_userpost"
            android:src="@drawable/user1"
            />
        <TextView
            android:id="@+id/tv_username_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/img_userpost"
            android:hint="@string/name"
            style="@style/textrecycle"
            android:layout_centerInParent="true"
            />
        <TextView
            android:id="@+id/tv_id_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/tv_username_post"
            android:layout_centerInParent="true"
            android:visibility="gone"
            />
        <TextView
            android:id="@+id/more_menu_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@drawable/ic_baseline_more_vert_24"
            android:layout_centerInParent="true"
            />


    </RelativeLayout>
    <ImageView
        android:id="@+id/imgview_post"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/logo"
        android:scaleType="fitXY"
        />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <TextView
            android:id="@+id/tv_likepost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_like"
            android:layout_alignParentStart="true"
            android:tag="Like"/>
        <TextView
            android:id="@+id/tv_commentpost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_comment"
            android:layout_toEndOf="@id/tv_likepost"/>
        <TextView
            android:id="@+id/tv_sendpost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_send"
            android:layout_toEndOf="@id/tv_commentpost"/>
        <TextView
            android:id="@+id/tv_markedpost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_marke"
            android:tag="off"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp">

        <TextView
            android:id="@+id/tv_idliked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            style="@style/textrecycle"/>
        <TextView
            style="@style/textrecycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/tv_idliked"
            android:text="@string/liked" />
        <TextView
            android:id="@+id/tv_id_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/tv_detailpost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:lines="5"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">

        <EditText
            android:id="@+id/tv_sendcomment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:hint="@string/add_a_comment"
            android:textSize="12sp"
            android:inputType="text"/>
        <TextView
            android:id="@+id/tv_likecomment"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:background="@drawable/ic_like"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>

    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>